📝 Add related reading to various posts and projects

--- a/src/content/blog/2023/building-a-shopifyql-editor/building-a-shopifyql-editor.mdx
+++ b/src/content/blog/2023/building-a-shopifyql-editor/building-a-shopifyql-editor.mdx
@@ -10,6 +10,9 @@ description: How I integrated CodeMirror into ShopifyQL Notebooks.
 image:
   source: ./a-sequence-of-robots-getting-more-sophisticated.jpg
   alt: A sequence of three robots, with the robots becoming more sophisticated as you move left to right
+related_reading:
+  - connecting-antlr-to-codemirror-6-building-a-language-server
+  - connecting-antlr-to-code-mirror-6-connecting-a-language-server
 ---
 
 In July 2022 I was tasked with integrating [CodeMirror](https://codemirror.net) into [ShopifyQL Notebooks](https://apps.shopify.com/shopifyql-notebooks). I had to discover how to connect our ShopifyQL language server to CodeMirror, which was something that the internet offered very little guidance on. After struggling for many months I finally reached the other side and was able to craft a delightful code editing experience.
