--- a/src/content/blog/2023/codemirror-and-react/codemirror-and-react.mdx
+++ b/src/content/blog/2023/codemirror-and-react/codemirror-and-react.mdx
@@ -13,6 +13,9 @@ image:
     author: Михаил Секацкий
     sourceName: Unsplash
     sourceUrl: https://unsplash.com/photos/OwR9cyMNe4c
+related_reading:
+  - learning-codemirror
+  - advanced-state-management-with-react-and-codemirror
 ---
 
 Over the past 10 months, I've been working with the [CodeMirror](https://codemirror.net/) framework to write and integrate a custom code editor into a React app. Coming from a React background, CodeMirror presented some unique challenges. I've spend many hours staring at the CodeMirror [docs](https://codemirror.net/docs/) and going in circles over how to get React and CodeMirror to play nicely. This article is meant to be a primer for developers who are going to integrate CodeMirror into React–it contains many of the lessons I've learned and will hopefully act as a springboard to writing your own CodeMirror-powered editor.
