--- a/src/content/blog/2023/learning-codemirror/learning-codemirror.mdx
+++ b/src/content/blog/2023/learning-codemirror/learning-codemirror.mdx
@@ -13,6 +13,9 @@ image:
     author: Diego PH
     sourceName: Unsplash
     sourceUrl: https://unsplash.com/photos/fIq0tET6llw
+related_reading:
+  - codemirror-and-react
+  - connecting-antlr-to-codemirror-6-building-a-language-server
 ---
 
 In July 2022, I was tasked with integrating [CodeMirror](https://codemirror.net/), a “code editor component for the web”, into [ShopifyQL Notebooks](https://shopify.engineering/building-commerce-data-models-with-shopifyql). Learning the ins and outs of the library was more complex than I anticipated, and there were many times that I came away from reading the docs scratching my head. After spending many months staring at [the documentation](https://codemirror.net/docs/) and [discussion board](https://discuss.codemirror.net/), I feel like I've emerged on the other side of a long journey of learning CodeMirror with a clearer picture of the core concepts. My goal with this article is to explain those concepts and provide commentary in addition to the many [examples](https://codemirror.net/examples/) that already exist on the CodeMirror site.
