--- a/src/content/blog/2024/advanced-state-management-with-react-and-codemirror/advanced-state-management-with-react-and-codemirror.mdx
+++ b/src/content/blog/2024/advanced-state-management-with-react-and-codemirror/advanced-state-management-with-react-and-codemirror.mdx
@@ -13,6 +13,9 @@ image:
     author: Fahrul Azmi
     sourceName: Unsplash
     sourceUrl: https://unsplash.com/photos/man-looking-book-inside-library-cFUZ-6i83vs
+related_reading:
+  - codemirror-and-react
+  - learning-codemirror
 ---
 
 <Callout>
