--- a/src/content/blog/2024/connecting-antlr-to-code-mirror-6-connecting-a-language-server/connecting-antlr-to-code-mirror-6-connecting-a-language-server.mdx
+++ b/src/content/blog/2024/connecting-antlr-to-code-mirror-6-connecting-a-language-server/connecting-antlr-to-code-mirror-6-connecting-a-language-server.mdx
@@ -13,6 +13,10 @@ image:
     author: Will Tarpey
     sourceName: Unsplash
     sourceUrl: https://unsplash.com/photos/7h2YTknTSzU
+related_reading:
+  - connecting-antlr-to-codemirror-6-building-a-language-server
+  - learning-codemirror
+  - codemirror-and-react
 ---
 
 <Callout>
