--- a/src/content/blog/2024/connecting-antlr-to-codemirror-6-building-a-language-server/connecting-antlr-to-codemirror-6-building-a-language-server.mdx
+++ b/src/content/blog/2024/connecting-antlr-to-codemirror-6-building-a-language-server/connecting-antlr-to-codemirror-6-building-a-language-server.mdx
@@ -13,6 +13,10 @@ image:
     author: C Dustin
     sourceName: Unsplash
     sourceUrl: https://unsplash.com/photos/91AQt9p4Mo8
+related_reading:
+  - connecting-antlr-to-code-mirror-6-connecting-a-language-server
+  - learning-codemirror
+  - codemirror-and-react
 ---
 
 For the past couple of years, I’ve worked on [ShopifyQL Notebooks](https://apps.shopify.com/shopifyql-notebooks), a data exploration tool offered by Shopify. The tool enables Shopify merchants to query their data in a [Jupiter-esque notebook](https://jupyter.org/) using [ShopifyQL](https://shopify.dev/docs/api/shopifyql/shopifyql-reference), a SQLish language that was developed in-house. One of the biggest challenges in creating ShopifyQL Notebooks was building a functional code editor with all of the bells and whistles you’d expect from a world class editor.
