📝 Publish "On Building Habits"

--- a/src/content/blog/2024/on-building-habits/on-building-habits.mdx
+++ b/src/content/blog/2024/on-building-habits/on-building-habits.mdx
@@ -3,8 +3,9 @@ title: "On Building Habits"
 date: 2024-07-30
 slug: "on-building-habits"
 type: Post
-status: Draft
-description: ""
+include_in_reading_list: true
+status: Published
+description: "How I managed to get a habit to stick for 1500+ days (and counting!)"
 image:
   alt: a sunrise through tall trees in the appalachians
   source: ./a-sunrise-through-tall-trees-in-the-appalachians.jpg
@@ -51,3 +52,7 @@ By setting the habit to be something that was stupid easy, I found that I would 
 ## Track the habit every day
 
 In both of these cases, I found that tracking the habit every day was critical to keeping me on track. I looked at a few different habit or goal trackers, but ultimately the most important thing was simplicity. I shouldn't need to be elaborate or have any additional friction when tracking a habit beyond checking a box. I like the Seinfeld ["don't break the chain"](https://todoist.com/inspiration/dont-break-the-chain) methodology, and have been using [Streaks](https://streaksapp.com) to manage my habits for 4 years (I highly recommend that app, it's the best one for tracking habits!).
+
+## Looking forward
+
+Years later, I still track some of these habits, keeping myself accountable. Despite these learnings, I still find it difficult to develop new habits! I guess having the drive to develop habits will always be a challenge–but at least I have a better starting point now than before.
