📝 Rename "Thoughts on building habits"

--- a/src/content/blog/2024/thoughts-on-building-habits/thoughts-on-building-habits.mdx
+++ b/src/content/blog/2024/thoughts-on-building-habits/thoughts-on-building-habits.mdx
@@ -1,7 +1,7 @@
 ---
-title: "On Building Habits"
+title: "Thoughts on building habits"
 date: 2024-07-30
-slug: "on-building-habits"
+slug: "thoughts-on-building-habits"
 type: Post
 include_in_reading_list: true
 status: Published
